--- a/Pousada desktop/Properties/Resources.resx
+++ b/Pousada desktop/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="mais" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mais.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="loginwall" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\loginwall.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
